# metalearn

./: .gitignore  .travis.yml  CONTRIBUTING.md  HISTORY.md  HOW_TO_RELEASE.md  LICENSE  MANIFEST.in  Oml_vs_us.txt  README.md  get_oml_mfs.py  metalearn_to_d3m_map.json  oml_metafeature_map.json  oml_metafeatures.json  openml_requirements.txt  primitive.json  requirements-test.txt  requirements.txt  run_tests.py  sample_size.py  setup.cfg  setup.py  test_metafeatures.py  update_test_datasets_mf.py
data/: 38_sick_train_data_mf.json  38_sick_train_mf.json  LL0_1122_ap_breast_prostate_mf.json  all_datasets.json  test_datasets.json
metalearn/: __init__.py
metalearn/features/: README.md  common_operations.py  information_theoretic_metafeatures.py  meta-features-1.0.r  metafeatures.py  rcca.py  simple_metafeatures.py  statistical_metafeatures.py
metalearn/metafeatures/: .nfs000000000e8c99500002c426  .nfs000000000eb0f1c10002c425  README.md  base.py  common_operations.py  constants.py  decision_tree_metafeatures.py  general_resource_computers.py  graph_metafeatures.py  information_theoretic_metafeatures.py  landmarking_metafeatures.py  metafeatures.json  metafeatures.py  metafeatures_base.py  metafeatures_schema.json  model_based_metafeatures.py  perceptron_metafeatures.py  resources.py  scratch.py  static_assets.py  (+3 more)
references/: README.md
test/: config.py  metadata.csv  metafeatures.jsonl  small_dataset_names.csv  tree_vs_knn_output.csv
tests/: benchmark_metafeatures.py  compare_with_openml.py  config.py  oml_metafeature_map.json  test_base.py  test_metafeatures.py
(+61 files in other folders)
