[metadata]
description-file = README.md

# Ignore missing mypy stub files for 3rd party imports

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-jsonschema.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-openml.*]
ignore_missing_imports = True

[mypy-arff2pandas.*]
ignore_missing_imports = True
